sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/JinjiIdo__c.object-meta.xml
<CustomObject>
    <description>オプション：人事異動の案内があるとここに保存されます。
Option:Stores personnel change information.</description>
    <label>人事異動情報</label>
    <nameField>
        <label>人事異動情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>