sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>会社名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>