sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/AnnounceDate__c.field-meta.xml
<CustomField>
    <fullName>AnnounceDate__c</fullName>
    <label>発令日</label>
    <type>Date</type>
</CustomField>