sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>氏名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>