sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/DaleteTarget__c.field-meta.xml
<CustomField>
    <fullName>DaleteTarget__c</fullName>
    <formula>if (
  DeleteDate__c &lt;= today(),
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>削除対象フラグ</label>
    <type>Checkbox</type>
</CustomField>