sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/DeleteDate__c.field-meta.xml
<CustomField>
    <fullName>DeleteDate__c</fullName>
    <description>掲載日から14日もしくは発令日から7日のいずれか新しい方</description>
    <formula>IF( 
ISNULL(AnnounceDate__c), 
PrintedDate__c + 14, 
IF( 
PrintedDate__c + 14 &lt; AnnounceDate__c + 7, 
AnnounceDate__c + 7, 
PrintedDate__c + 14 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>削除予定日</label>
    <type>Date</type>
</CustomField>