sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/NameCard__c.field-meta.xml
<CustomField>
    <fullName>NameCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名刺</label>
    <referenceTo>NameCard__c</referenceTo>
    <relationshipLabel>人事異動情報</relationshipLabel>
    <relationshipName>NameCardJinjiIdos</relationshipName>
    <type>Lookup</type>
</CustomField>