sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/NewTitle__c.field-meta.xml
<CustomField>
    <fullName>NewTitle__c</fullName>
    <label>新職名</label>
    <type>TextArea</type>
</CustomField>