sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/OldTitle__c.field-meta.xml
<CustomField>
    <fullName>OldTitle__c</fullName>
    <label>旧職名</label>
    <type>TextArea</type>
</CustomField>