sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/PrintedDate__c.field-meta.xml
<CustomField>
    <fullName>PrintedDate__c</fullName>
    <label>掲載日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>