sfdx-source/SmartVisca/main/default/objects/JinjiIdo__c/fields/PutTitle__c.field-meta.xml
<CustomField>
    <fullName>PutTitle__c</fullName>
    <formula>HYPERLINK( &apos;/apex/SB_NameCard_TitleUpdater?id=&apos; &amp;  Id, $Label.SB_NC_ReflectToTitle, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先責任者の役職に反映</label>
    <type>Text</type>
</CustomField>